--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ bodyClass: page-home
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
-      {% for service in site.services %}
+      <!-- {% for service in site.services %}
       <div class="col-12 col-md-4 mb-1">
         <div class="service service-summary">
           <div class="service-content">
@@ -36,13 +36,13 @@ bodyClass: page-home
           </div>
         </div>
       </div>
-      {% endfor %}
+      {% endfor %} -->
     </div>
-    <div class="row justify-content-center">
+    <!-- <div class="row justify-content-center">
       <div class="col-auto">
         <a class="button button-primary" href="{{site.baseurl}}/services">View All Services</a>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
